Fix overflow clipping for song part title.

--- a/frontend/src/components/arrangement-view/arrangement-view.styles.scss
+++ b/frontend/src/components/arrangement-view/arrangement-view.styles.scss
@@ -10,42 +10,47 @@
 
   display: flex;
   flex-direction: column;
-  font-size: 14px;
+  font-size: 11px;
 
   .arrangement-header {
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
-
-    // border-bottom: 1px solid lightgrey;
-    // padding-bottom: 5px;
   }
 
   .add-part-icon {
     font-size: 20px;
-    // margin-top: 5px;
+    margin-top: 5px;
     margin-bottom: 10px;
     cursor: pointer;
   }
 
-  @media screen and (min-width: 992px) {
+  @media screen and (min-width: 600px) {
     & {
-      font-size: 16px;
+      font-size: 13px;
 
       .add-part-icon {
         font-size: 25px;
-        // margin-bottom: 10px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    & {
+      font-size: 14px;
+
+      .add-part-icon {
+        font-size: 25px;
       }
     }
   }
 
   @media screen and (min-width: 1300px) {
     & {
-      font-size: 16px;
+      font-size: 15px;
 
       .add-part-icon {
         font-size: 30px;
-        // margin-bottom: 15px;
       }
     }
   }
