--- a/frontend/src/components/song-part/song-part.styles.scss
+++ b/frontend/src/components/song-part/song-part.styles.scss
@@ -16,10 +16,14 @@
     flex-direction: row;
     margin-top: 10px;
     margin-bottom: 10px;
+    white-space: nowrap;
 
     .title {
       font-weight: 600;
-      margin: auto auto auto 0;
+      margin: auto 5px auto 0;
+      width: 33%;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     .time-indication {
@@ -38,6 +42,26 @@
       .caret {
         font-size: 20px;
       }
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    & {
+    }
+  }
+
+  @media screen and (min-width: 1300px) {
+    & {
+    }
+  }
+
+  @media screen and (min-width: 1700px) {
+    & {
+    }
+  }
+
+  @media screen and (min-width: 2200px) {
+    & {
     }
   }
 }
